# ndk-cli

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh
src/: CMakeLists.txt  JniLoader.cpp
